<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.ibeetl</groupId>
	<artifactId>beetlsql</artifactId>
	<version>2.12.26.RELEASE</version>
	<name>com.ibeetl:beetlsql</name>
	<url>http://maven.apache.org</url>
	<description>java DAO tool</description>
	<licenses>
		<license>
			<name>The "BSD license</name>
			<url>http://opensource.org/licenses/BSD-3-Clause</url>
		</license>
	</licenses>

	<developers>
		<developer>
			<email>xiandafu@126.com</email>
		</developer>
		<developer>
			<name>Gavin·King</name>
			<email>393922808@qq.com</email>
		</developer>
		<developer>
			<name>Sue</name>
			<email>15377535802@qq.com</email>
		</developer>
		<developer>
			<name>zhoupan</name>
			<email>370267858@qq.com</email>
		</developer>
		<developer>
			<name>woate</name>
			<email>woate@qq.com</email>
		</developer>

		<developer>
			<name>darren</name>
			<email>10176523@qq.com</email>
		</developer>
	</developers>

	<scm>
		<connection>scm:git@git.oschina.net:xiandafu/beetlsql.git</connection>
		<developerConnection>scm:git@git.oschina.net:xiandafu/beetlsql.git</developerConnection>
		<url>https://git.oschina.net/xiandafu/beetlsql</url>
	</scm>

	<properties>
		<java-version>1.8</java-version>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<spring.version>4.2.3.RELEASE</spring.version>
		<aspectj.version>1.6.11</aspectj.version>
	</properties>


	<dependencies>
		<dependency>
			<groupId>com.ibeetl</groupId>
			<artifactId>beetl</artifactId>
            <version>3.1.3.RELEASE</version>
			<scope>compile</scope>
		</dependency>

		<!-- junit -->
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.12</version>
			<scope>test</scope>
		</dependency>



		<dependency>
			<groupId>org.hamcrest</groupId>
			<artifactId>hamcrest-core</artifactId>
			<version>1.3</version>
			<scope>test</scope>
		</dependency>

		<!-- Java Servlet -->
		<dependency>
			<groupId>javax.servlet</groupId>
			<artifactId>javax.servlet-api</artifactId>
			<version>3.1.0</version>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-jdbc</artifactId>
			<version>4.2.3.RELEASE</version>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-context</artifactId>
			<version>4.2.3.RELEASE</version>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-test</artifactId>
			<version>4.2.3.RELEASE</version>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>mysql</groupId>
			<artifactId>mysql-connector-java</artifactId>
<!--			  <version>6.0.6</version>-->
			  <version>8.0.12</version>
			<scope>provided</scope>
		</dependency>

        <!--<dependency>-->
            <!--<groupId>com.microsoft.sqlserver</groupId>-->
            <!--<artifactId>sqljdbc4</artifactId>-->
			<!--<version>4.0</version>-->
            <!--<scope>system</scope>-->
            <!--<systemPath>${basedir}/lib/sqljdbc4.jar</systemPath>-->
        <!--</dependency>-->

		<!-- dependency> <groupId>oracle</groupId> <artifactId>oralce-express</artifactId> 
			<version>6</version> <scope>system</scope> <systemPath>${basedir}/lib/ojdbc6-11.2.0.1.0.jar</systemPath> 
			</dependency -->


		<!-- dependency> <groupId>db2</groupId> <artifactId>driver</artifactId> 
			<version>6</version> <scope>system</scope> <systemPath>${basedir}/lib/db2jcc.jar</systemPath> 
			</dependency -->

		<!-- dependency> <groupId>db2</groupId> <artifactId>driver-license</artifactId> 
			<version>6</version> <scope>system</scope> <systemPath>${basedir}/lib/db2jcc_license_cu.jar</systemPath> 
			</dependency -->

		<dependency>
			<groupId>com.alibaba</groupId>
			<artifactId>druid</artifactId>
			<version>1.0.21</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>c3p0</groupId>
			<artifactId>c3p0</artifactId>
			<version>0.9.1.2</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>com.zaxxer</groupId>
			<artifactId>HikariCP</artifactId>
			<version>2.6.1</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.aspectj</groupId>
			<artifactId>aspectjrt</artifactId>
			<version>${aspectj.version}</version>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>org.aspectj</groupId>
			<artifactId>aspectjweaver</artifactId>
			<version>${aspectj.version}</version>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>com.jfinal</groupId>
			<artifactId>jfinal</artifactId>
			<version>3.0</version>
			<scope>provided</scope>
		</dependency>


		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-core</artifactId>
			<version>4.2.3.RELEASE</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-beans</artifactId>
			<version>4.2.3.RELEASE</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-context</artifactId>
			<version>4.2.3.RELEASE</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-test</artifactId>
			<version>4.2.3.RELEASE</version>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>javax.persistence</groupId>
			<artifactId>persistence-api</artifactId>
			<version>1.0.2</version>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>org.postgresql</groupId>
			<artifactId>postgresql</artifactId>
			<version>42.2.2</version>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-databind</artifactId>
			<version>2.9.6</version>
			<scope>provided</scope>
		</dependency>



		<!-- <dependency>
			<groupId>com.oracle</groupId>
			<artifactId>jdbcdriver</artifactId>
			<version>4.1</version>
			<scope>system</scope>
			<systemPath>${basedir}/lib/ojdbc6-11.2.0.1.0.jar</systemPath>
		</dependency> -->


	</dependencies>

	<build>
		<resources>
			<resource>
				<directory>src/main/resources</directory>
                <excludes>
                    <exclude>sql/**</exclude>
                </excludes>
			</resource>

		</resources>
		<plugins>

			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
                <version>3.6.2</version>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
					<encoding>UTF-8</encoding>
                    <parameters>true</parameters>
<!--                    <excludes>-->
<!--                        <exclude>org/beetl/sql/test/**</exclude>-->
<!--                    </excludes>-->
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.sonatype.plugins</groupId>
				<artifactId>nexus-staging-maven-plugin</artifactId>
				<extensions>true</extensions>
				<configuration>
					<serverId>snapshots</serverId>
					<nexusUrl>https://oss.sonatype.org/</nexusUrl>
					<autoReleaseAfterClose>true</autoReleaseAfterClose>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.16</version>
				<configuration>
					<skip>true</skip>
				</configuration>
			</plugin>

			<!-- Source -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<version>2.2.1</version>
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>jar-no-fork</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>2.9.1</version>
				<configuration>
					<charset>utf-8</charset>
					<encoding>utf-8</encoding>
                    <additionalparam>-Xdoclint:none</additionalparam>
					<quiet>true</quiet>
				</configuration>
				<executions>
					<execution>
						<id>attach-javadocs</id>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-gpg-plugin</artifactId>
				<version>1.5</version>
				<executions>
					<execution>
						<id>sign-artifacts</id>
						<phase>verify</phase>
						<goals>
							<goal>sign</goal>
						</goals>
					</execution>
				</executions>
			</plugin>



			<!--<plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>8</source>
                    <target>8</target>
                </configuration>
            </plugin>
             <plugin> <groupId>org.apache.maven.plugins</groupId> <artifactId>maven-compiler-plugin</artifactId>
                <configuration> <source>1.8</source> <target>1.8</target> </configuration>
                </plugin> -->


		</plugins>
	</build>


	<distributionManagement>
		<snapshotRepository>
			<id>snapshots</id>
			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
		</snapshotRepository>
		<repository>
			<id>releases</id>
			<url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
		</repository>
	</distributionManagement>


</project>
  
